[gd_scene load_steps=98 format=2]

[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FinalBoss.gd" type="Script" id=2]
[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_5.png" type="Texture" id=6]
[ext_resource path="res://Assets/FinalBoss/Boss_Idle/demon_idle_6.png" type="Texture" id=7]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_7.png" type="Texture" id=8]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_7.png" type="Texture" id=9]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_10.png" type="Texture" id=11]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_12.png" type="Texture" id=12]
[ext_resource path="res://Sounds/flameThrowBoss.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_11.png" type="Texture" id=14]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_8.png" type="Texture" id=15]
[ext_resource path="res://Sounds/FinalBossRawr.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/FinalBossCleave.ogg" type="AudioStream" id=17]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_10.png" type="Texture" id=18]
[ext_resource path="res://Assets/FinalBoss/Boss_Walk/demon_walk_5.png" type="Texture" id=19]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_8.png" type="Texture" id=20]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_11.png" type="Texture" id=21]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_14.png" type="Texture" id=22]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_15.png" type="Texture" id=23]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_5.png" type="Texture" id=24]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_13.png" type="Texture" id=25]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_12.png" type="Texture" id=26]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_4.png" type="Texture" id=27]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_2.png" type="Texture" id=28]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_9.png" type="Texture" id=29]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_1.png" type="Texture" id=30]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_3.png" type="Texture" id=31]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_6.png" type="Texture" id=32]
[ext_resource path="res://Assets/Enemies/fire_big.png" type="Texture" id=33]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_6(fire).png" type="Texture" id=34]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_9(fire).png" type="Texture" id=35]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_7(fire).png" type="Texture" id=36]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_8(fire).png" type="Texture" id=37]
[ext_resource path="res://Assets/FinalBoss/Boss_Cleave/demon_cleave_5 (fire).png" type="Texture" id=38]
[ext_resource path="res://Assets/FinalBoss/LongAttack/4.png" type="Texture" id=39]
[ext_resource path="res://Assets/FinalBoss/LongAttack/7.png" type="Texture" id=40]
[ext_resource path="res://Assets/FinalBoss/LongAttack/11.png" type="Texture" id=41]
[ext_resource path="res://Assets/FinalBoss/LongAttack/1.png" type="Texture" id=42]
[ext_resource path="res://Assets/FinalBoss/LongAttack/5.png" type="Texture" id=43]
[ext_resource path="res://Assets/FinalBoss/LongAttack/8.png" type="Texture" id=44]
[ext_resource path="res://Assets/FinalBoss/LongAttack/9.png" type="Texture" id=45]
[ext_resource path="res://Assets/FinalBoss/LongAttack/13.png" type="Texture" id=46]
[ext_resource path="res://Assets/FinalBoss/LongAttack/14.png" type="Texture" id=47]
[ext_resource path="res://Assets/FinalBoss/LongAttack/15.png" type="Texture" id=48]
[ext_resource path="res://Assets/FinalBoss/LongAttack/16.png" type="Texture" id=49]
[ext_resource path="res://Assets/FinalBoss/LongAttack/17.png" type="Texture" id=50]
[ext_resource path="res://Assets/FinalBoss/LongAttack/18.png" type="Texture" id=51]
[ext_resource path="res://Assets/FinalBoss/LongAttack/19.png" type="Texture" id=52]
[ext_resource path="res://Assets/FinalBoss/LongAttack/2.png" type="Texture" id=53]
[ext_resource path="res://Assets/FinalBoss/LongAttack/3.png" type="Texture" id=54]
[ext_resource path="res://Assets/FinalBoss/LongAttack/6.png" type="Texture" id=55]
[ext_resource path="res://Assets/FinalBoss/LongAttack/10.png" type="Texture" id=56]
[ext_resource path="res://Assets/FinalBoss/LongAttack/12.png" type="Texture" id=57]
[ext_resource path="res://Assets/FinalBoss/LongAttack/20.png" type="Texture" id=58]
[ext_resource path="res://Assets/FinalBoss/LongAttack/21.png" type="Texture" id=59]
[ext_resource path="res://Sounds/fireball.ogg" type="AudioStream" id=60]
[ext_resource path="res://Sounds/bearFootsteps.ogg" type="AudioStream" id=61]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_16.png" type="Texture" id=67]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_20.png" type="Texture" id=68]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_22.png" type="Texture" id=69]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_17.png" type="Texture" id=70]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_15.png" type="Texture" id=71]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_18.png" type="Texture" id=72]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_19.png" type="Texture" id=73]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_21.png" type="Texture" id=74]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_1.png" type="Texture" id=75]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_9.png" type="Texture" id=76]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_10.png" type="Texture" id=77]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_11.png" type="Texture" id=78]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_8.png" type="Texture" id=79]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_5.png" type="Texture" id=80]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_6.png" type="Texture" id=81]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_3.png" type="Texture" id=82]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_12.png" type="Texture" id=83]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_13.png" type="Texture" id=84]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_14.png" type="Texture" id=85]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_4.png" type="Texture" id=86]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_7.png" type="Texture" id=87]
[ext_resource path="res://Assets/FinalBoss/Boss_Dead/demon_death_2.png" type="Texture" id=88]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 54 ), ExtResource( 39 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 43 ), ExtResource( 55 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 56 ), ExtResource( 41 ), ExtResource( 57 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "Flames",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 38 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 37 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "attackFire",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 32 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "attackcleave",
"speed": 9.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 88 ), ExtResource( 82 ), ExtResource( 86 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 87 ), ExtResource( 79 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 71 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 68 ), ExtResource( 74 ), ExtResource( 69 ), null ],
"loop": false,
"name": "dead",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.5, 41.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 87.25, 18.75 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 62.25, 39.25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19.75, 41.125 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 33 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 33 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 33 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 33 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 33 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 33 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 26, 10 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 53.5, 33 )

[node name="FinalBoss" type="KinematicBody2D" groups=["finalBoss"]]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -9, -114 )
scale = Vector2( 1.5, 1.6 )
frames = SubResource( 4 )
animation = "Flames"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2( -26, -48 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2( -5.5, -38 )
rotation = -1.5708
shape = SubResource( 5 )

[node name="AttackFlame" type="CollisionShape2D" parent="."]
position = Vector2( -134.25, -20 )
shape = SubResource( 16 )
disabled = true

[node name="attack" type="CollisionShape2D" parent="."]
position = Vector2( -109.25, -26.75 )
shape = SubResource( 15 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -23, -48 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5.125, -38 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="Left" type="RayCast2D" parent="."]
light_mask = 5
position = Vector2( -49, -7 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 480 )
collision_mask = 7

[node name="Right" type="RayCast2D" parent="."]
light_mask = 5
position = Vector2( 73, -8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 480 )
collision_mask = 7

[node name="Attack" type="RayCast2D" parent="."]
light_mask = 5
position = Vector2( -25, -1 )
rotation = 1.5708
enabled = true
cast_to = Vector2( -0.999341, 182 )
collision_mask = 7

[node name="LongAttack" type="RayCast2D" parent="."]
light_mask = 5
position = Vector2( -254, -3 )
rotation = 1.5708
cast_to = Vector2( 0.000437975, 121 )
collision_mask = 7

[node name="cooldown" type="Timer" parent="."]

[node name="attackFireRawr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = 2.222
pitch_scale = 0.49

[node name="attackcleaveRawr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
pitch_scale = 0.82

[node name="CleaveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
pitch_scale = 0.91

[node name="FlameThrow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 0.4
pitch_scale = 1.36

[node name="FootSteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 61 )
volume_db = 10.059
pitch_scale = 0.19
max_distance = 600.0
attenuation = 0.840896

[node name="fire1" type="KinematicBody2D" parent="." groups=["finalBoss"]]
position = Vector2( -212, 52 )
collision_layer = 5
collision_mask = 5

[node name="AnimatedSprite2" type="AnimatedSprite" parent="fire1"]
position = Vector2( 0, -17 )
scale = Vector2( 1.75, 1.7 )
frames = SubResource( 13 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire1"]
position = Vector2( -1.52588e-05, 3.8147e-06 )
shape = SubResource( 14 )

[node name="fire2" type="KinematicBody2D" parent="." groups=["finalBoss"]]
position = Vector2( -265, 52 )
collision_layer = 5
collision_mask = 5

[node name="AnimatedSprite3" type="AnimatedSprite" parent="fire2"]
position = Vector2( 2.99994, -17 )
scale = Vector2( 1.75, 1.7 )
frames = SubResource( 13 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire2"]
shape = SubResource( 14 )

[node name="fire3" type="KinematicBody2D" parent="." groups=["finalBoss"]]
position = Vector2( -312, 52 )
collision_layer = 5
collision_mask = 5

[node name="AnimatedSprite4" type="AnimatedSprite" parent="fire3"]
position = Vector2( -1, -17 )
scale = Vector2( 1.75, 1.7 )
frames = SubResource( 13 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire3"]
shape = SubResource( 14 )

[node name="fire4" type="KinematicBody2D" parent="." groups=["finalBoss"]]
position = Vector2( -374, 52 )
collision_layer = 5
collision_mask = 5

[node name="AnimatedSprite5" type="AnimatedSprite" parent="fire4"]
position = Vector2( 13, -17 )
scale = Vector2( 1.75, 1.7 )
frames = SubResource( 13 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire4"]
position = Vector2( 10, 0 )
shape = SubResource( 14 )

[node name="Fire" type="AudioStreamPlayer2D" parent="fire4"]
position = Vector2( 10, 0 )
scale = Vector2( 0.999999, 1 )
stream = ExtResource( 60 )
volume_db = 3.2
pitch_scale = 0.82
max_distance = 500.0

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -5.5, -49 )
shape = SubResource( 18 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
